Feature 'Gérer réclamation' , 'Gérer Stock' et 'Authentification'

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,27 @@ dist.jar=${dist.dir}/Bookstore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.dsn.jar=C:\\Users\\ASUS\\Desktop\\lib\\dsn.jar
+file.reference.imap.jar=C:\\Users\\ASUS\\Desktop\\lib\\imap.jar
+file.reference.javax.mail.jar=C:\\Users\\ASUS\\Desktop\\lib\\javax.mail.jar
+file.reference.mail.jar=C:\\Users\\ASUS\\Desktop\\lib\\mail.jar
+file.reference.mailapi.jar=C:\\Users\\ASUS\\Desktop\\lib\\mailapi.jar
+file.reference.pop3.jar=C:\\Users\\ASUS\\Desktop\\lib\\pop3.jar
+file.reference.smtp.jar=C:\\Users\\ASUS\\Desktop\\lib\\smtp.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.dsn.jar}:\
+    ${file.reference.imap.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.pop3.jar}:\
+    ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
