Feature 'Gérer Réclamation' , 'Gérer Stock' et 'Authentification'

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/Bookstore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.18.jar=C:\\Users\\ASUS\\Desktop\\controlsfx-8.40.18.jar
+file.reference.controlsfx-samples-8.40.18.jar=C:\\Users\\ASUS\\Desktop\\controlsfx-samples-8.40.18.jar
 file.reference.dsn.jar=C:\\Users\\ASUS\\Desktop\\lib\\dsn.jar
 file.reference.imap.jar=C:\\Users\\ASUS\\Desktop\\lib\\imap.jar
 file.reference.javax.mail.jar=C:\\Users\\ASUS\\Desktop\\lib\\javax.mail.jar
@@ -50,7 +52,9 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.mailapi.jar}:\
     ${file.reference.pop3.jar}:\
-    ${file.reference.smtp.jar}
+    ${file.reference.smtp.jar}:\
+    ${file.reference.controlsfx-8.40.18.jar}:\
+    ${file.reference.controlsfx-samples-8.40.18.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
